--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -163,7 +163,7 @@ Case details
 
                     <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Notifications</h2>
 
-                    <p class="govuk-body  govuk-!-margin-bottom-7">Once we’ve approved this notice of change,
+                    <p class="govuk-body  govuk-!-margin-bottom-7">Once we’ve approved this Notice of Change,
                         we’ll email the legal firm that will no longer be representing the case.</p>
 
 
