--- a/app/views/noticeofchange/solicitor/emailgoingoffrecordrejected.html
+++ b/app/views/noticeofchange/solicitor/emailgoingoffrecordrejected.html
@@ -66,10 +66,10 @@
                     <tr>
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
-                            <p style="margin:0 0 30px;font-size:19px"></p>
-                            <p style="margin:0 0 30px;font-size:19px">You are no longer representing one or more clients on case 1593-0136-4696-9976 Smith vs Jones.</p>
-                            <p style="margin:30px 0 30px;font-size:19px">You have been removed from this case and no longer have access to it.</p>
-
+                            <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed your Notice of Change request to stop representing Joe Bloggs.</p>
+                            <p style="margin:30px 0 30px;font-size:19px">Unfortunately, your request has been rejected. This means you still have access to case 1593-0136-4696-9976.</p>
+                            <p style="margin:30px 0 30px;font-size:19px"><a href="#">Contact HMCTS</a> if you have any further questions.</p>
                             <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">This is an automated email - we can't respond to replies.</p>
