--- a/app/views/noticeofchange/solicitor/emailofremoved.html
+++ b/app/views/noticeofchange/solicitor/emailofremoved.html
@@ -66,9 +66,14 @@
                     <tr>
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
-                            <p style="margin:0 0 30px;font-size:19px">Dear Alex Smith</p>
-                            <p style="margin:0 0 30px;font-size:19px">You are no longer representing one or more clients on case 1593-0136-4696-9976 Smith vs Jones.</p>
-                            <p style="margin:30px 0 30px;font-size:19px">You have been removed from this case and no longer have access to it.</p>
+                            <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
+                            <p style="margin:0 0 30px;font-size:19px">A Notice of Change has been filed online for case 1593-0136-4696-9976. </p>
+                            <p style="margin:30px 0 30px;font-size:19px">You are no longer representing Joe Bloggs.</p>
+
+                            <p style="margin:30px 0 30px;font-size:19px">You have been removed from this case and no longer have access to it.
+                                If you don’t represent another party in this case, it will be removed from your case list.</p>
+
+                            <p style="margin:30px 0 30px;font-size:19px">This is a new online process - you don’t need to file any further documents to the court.</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
 
