--- a/app/views/noticeofchange/solicitor/securityquestionprobate.html
+++ b/app/views/noticeofchange/solicitor/securityquestionprobate.html
@@ -75,7 +75,7 @@ Case details
                                             </label>
                                             {% if data.errorsecurityprobatetitle == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Enter the deceased's title
+                                                    <span class="govuk-visually-hidden">Error:</span> Enter title of the deceased
                                                 </span>
                                             {% endif %}
 
@@ -97,7 +97,7 @@ Case details
                                             </label>
                                             {% if data.errorsecurityprobatefirstname == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Enter the deceased's first name
+                                                    <span class="govuk-visually-hidden">Error:</span> Enter first name of the deceased
                                                 </span>
                                             {% endif %}
 
@@ -119,7 +119,7 @@ Case details
                                             </label>
                                             {% if data.errorsecurityprobatelastname == 'true'  %}
                                                 <span id="" class="govuk-error-message">
-                                                    <span class="govuk-visually-hidden">Error:</span> Enter the deceased's last name
+                                                    <span class="govuk-visually-hidden">Error:</span> Enter last name of the deceased
                                                 </span>
                                             {% endif %}
 
