--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -25,7 +25,7 @@ Case details
 
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-l">Who will you be representing in the case?</h1>
+               <h1 class="govuk-heading-l">What will be your role in this case?</h1>
           </div>
     </div>
 
@@ -45,15 +45,15 @@ Case details
         {% endif %}
             <div class="govuk-radios" id="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Representing client" >
+                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Representing a client" >
                     <label class="govuk-label govuk-radios__label" for="radio1">
-                        Representing client
+                        Representing a client
                     </label>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Executor" >
-                    <label class="govuk-label govuk-radios__label" for="radio1">
-                        Executor
+                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Named as executor" >
+                    <label class="govuk-label govuk-radios__label" for="radio2">
+                        Named as executor
                     </label>
                 </div>
             </div>
