--- a/app/views/noticeofchange/solicitor/stopreason.html
+++ b/app/views/noticeofchange/solicitor/stopreason.html
@@ -31,6 +31,12 @@ Case details
                         id="aspnetForm"
                         autocomplete="off">
 
+                        <p><span id="case-number-hint" class="govuk-hint">
+                            For example, your client has chosen to represent themselves.
+                          </span>
+                        </p>
+
+
                         <textarea class="govuk-textarea" id="stoppingmoredetail" name="stoppingmoredetail" rows="3" >{{ data.stoppingmoredetail }}</textarea>
 
                         <br>
