--- a/app/views/noticeofchange/solicitor/stopselectclients.html
+++ b/app/views/noticeofchange/solicitor/stopselectclients.html
@@ -15,7 +15,7 @@ Case details
     <div class="govuk-error-summary__body">
         <ul class="govuk-list govuk-error-summary__list">
             <li>
-                <a href="#clientselected">Select the clients you want to stop representing</a>
+                <a href="#clientselected">Who do you want to stop representing in this case</a>
             </li>
         </ul>
     </div>
