--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -9,7 +9,7 @@ Case details
 
     <div class="govuk-width-container">
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-one-half">
+            <div class="govuk-grid-column-two-thirds">
 
                 {% if data.errorcasenumber == 'true' %}
                     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
@@ -29,7 +29,7 @@ Case details
 
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Enter case reference number</h1>
+                           <h1 class="govuk-heading-l">Enter online case reference number</h1>
                       </div>
                 </div>
 
@@ -48,7 +48,7 @@ Case details
 
 
                           <span id="case-number-hint" class="govuk-hint">
-                            This is a 16-digit number, for example 1111-2222-3333-4444
+                            This is a 16-digit number from MyHMCTS, for example 1111-2222-3333-4444
                           </span>
 
 
