--- a/app/views/noticeofchange/solicitor/confirmationofstopping.html
+++ b/app/views/noticeofchange/solicitor/confirmationofstopping.html
@@ -16,11 +16,14 @@ Case details
 
                 {% if data.stoppingoutcome == 'auto' %}
                     <div class="govuk-panel govuk-panel--confirmation">
-                        <h1  class="govuk-panel__title">You have successfully stopped representation</h1>
+                        <h1  class="govuk-panel__title">You have stopped representing this client</h1>
                     </div>
-                    <p class="govuk-!-margin-top-6">We've sent an email to confirm you’ve stopped representing this client.</p>
-                    <p>The case has been removed from your caselist and you no longer have access to it.</p>
-                    <p>We'll send the case to this client.</p>
+                    <p class="govuk-!-margin-top-6">We’ve sent you an email confirming this Notice of Change.</p>
+                    <p>You have been removed from this case and no longer have access to it.
+                        If you don’t represent another party in this case, it will be removed from your case list.</p>
+
+                    <h2 class="govuk-heading-m ">What happens next</h2>
+                    <p>We’ll send the case file to this client in the post.</p>
 
                     <p class="govuk-body">
                         <a href="caselist">View case list</a>
