--- a/app/views/noticeofchange/solicitor/emailgoingoffrecordaccepted.html
+++ b/app/views/noticeofchange/solicitor/emailgoingoffrecordaccepted.html
@@ -66,10 +66,10 @@
                     <tr>
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
-                            <p style="margin:0 0 30px;font-size:19px"></p>
-                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your Notice of Change request to go off record for one or more clients on case 1593-0136-4696-9976 Smith vs Jones.</p>
-                            <p style="margin:30px 0 30px;font-size:19px">You have been removed from this case and no longer have access to it.</p>
-
+                            <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your Notice of Change request to stop representing Joe Bloggs.</p>
+                            <p style="margin:30px 0 30px;font-size:19px">You have been removed from case 1593-0136-4696-9976 and no longer have access to it.</p>
+                            <p style="margin:30px 0 30px;font-size:19px">If you don’t represent another party in this case, it will be removed from your case list.</p>
                             <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">This is an automated email - we can't respond to replies.</p>
