--- a/app/views/noticeofchange/solicitor/emailgoingonrecordrejected.html
+++ b/app/views/noticeofchange/solicitor/emailgoingonrecordrejected.html
@@ -66,13 +66,13 @@
                     <tr>
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
-                            <p style="margin:0 0 30px;font-size:19px"></p>
-                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and rejected your Notice of Change request to go on record for one or more clients on case 1593-0136-4696-9976 Smith vs Jones.</p>
+                            <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed your Notice of Change request to acquire the case file for Joe Bloggs.</p>
 
-                            <p style="margin:30px 0 30px;font-size:19px">If you have further questions please call HMCTS.</p>
+                            <p style="margin:30px 0 30px;font-size:19px">Unfortunately, your request has been rejected. This means you won’t be able to access case 1593-0136-4696-9976.</p>
 
+                            <p style="margin:30px 0 30px;font-size:19px"><a href="#">Contact HMCTS</a> if you have any further questions.</p>
                             <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
-
                             <p style="margin:30px 0 30px;font-size:19px">This is an automated email - we can't respond to replies.</p>
 
 
