sot and client details for remove case

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -152,7 +152,7 @@ Case details
                                         <p>My organisation or I have been requested to represent a party in this case.</p>
 
                                         <p>I understand that proceedings for contempt of court may be brought against
-                                            anyone who requests access to a case verified by a statement of truth without an honest belief in its truth.</p>
+                                            anyone who stops representing a client verified by a statement of truth without an honest belief in its truth.</p>
                                     </label>
                                 </div>
                             </div>
