--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -58,7 +58,7 @@
 
 
                 <div class="hmcts-header__logo">
-                    <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist">Manage Cases</a>
+                    <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page">Manage Cases</a>
                 </div>
 
 
