updates from technical changes

--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -115,8 +115,8 @@
                 searchHtml: searchHtml
                 }) }}
             </div>
-        </div>
 
+        </div>
 
     </div>
 
@@ -132,6 +132,15 @@
       </span>
     </p>
   </div>
+
+  <!-- Back link -->
+    <div style="width:1220px; display: flex; margin: 0 auto;">
+        <p style="margin-bottom: 0px;">
+            <a href="javascript:history.back()" class="govuk-back-link"  style="margin-bottom: 0px;">Back</a>
+        </p>
+    </div>
+
+
 
 {% endblock %}
 
