--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -8,70 +8,111 @@ Case details
 {% block content %}
 
     <div class="govuk-width-container">
+
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
-                {% if data.errorcasenumber == 'true' %}
-                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-                        <h2 class="govuk-error-summary__title" id="error-summary-title">
-                            There is a problem
-                        </h2>
-                        <div class="govuk-error-summary__body">
-                            <ul class="govuk-list govuk-error-summary__list">
-                                <li>
-                                    <a href="#casenumber">The case number must be 16 digits</a>
-                                </li>
-                            </ul>
+
+
+                {% if data.serviceeligibilityerror == 'true' %}
+                    <div class="hmcts-page-heading">
+                        <div class="hmcts-page-heading__title">
+                            <h1 class="govuk-heading-l">Your case isn't supported</h1>
                         </div>
                     </div>
-                {% endif %}
+
+                    <p>This online Notice of change services doesn't currently support this case.</p>
+
+                    <p>Please use the paper form to complete this Notice of change process offline.</p>
+
+                    <p class="govuk-body"><a href="caselist">View case list</a></p>
 
 
-                <div class="hmcts-page-heading">
-                      <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Enter online case reference number</h1>
-                      </div>
-                </div>
 
-
-                <form
-                        name="aspnetForm"
-                        method="post"
-                        id="aspnetForm"
-                        autocomplete="off">
+                {% else %}
+                <!--  Normal page function -->
 
                         {% if data.errorcasenumber == 'true' %}
-                            <div class="govuk-form-group govuk-form-group--error">
-                        {% else %}
-                            <div class="govuk-form-group ">
+                            <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+                                <h2 class="govuk-error-summary__title" id="error-summary-title">
+                                    There is a problem
+                                </h2>
+                                <div class="govuk-error-summary__body">
+                                    <ul class="govuk-list govuk-error-summary__list">
+                                        <li>
+                                            <a href="#casenumber">The case number must be 16 digits</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
                         {% endif %}
 
 
-                          <span id="case-number-hint" class="govuk-hint">
-                            This is a 16-digit number from MyHMCTS, for example 1111-2222-3333-4444
-                          </span>
+
+                        <div class="hmcts-page-heading">
+                              <div class="hmcts-page-heading__title">
+                                   <h1 class="govuk-heading-l">Enter online case reference number</h1>
+                              </div>
+                        </div>
 
 
-                            {% if data.errorcasenumber == 'true' %}
-                                <span id="national-insurance-number-error" class="govuk-error-message">
-                                    <span class="govuk-visually-hidden">Error:</span> The case number must be 16 digits, for example 1111-2222-3333-4444.
-                                </span>
-                                <input class="govuk-input govuk-input--width-10 govuk-input--error" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
-                            {% else %}
-                                <input class="govuk-input govuk-input--width-10" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
-                            {% endif %}
+                        <form
+                                name="aspnetForm"
+                                method="post"
+                                id="aspnetForm"
+                                autocomplete="off">
 
-                            </div>
+                                {% if data.errorcasenumber == 'true' %}
+                                    <div class="govuk-form-group govuk-form-group--error">
+                                {% else %}
+                                    <div class="govuk-form-group ">
+                                {% endif %}
 
 
-                        <button class="govuk-button" data-module="govuk-button">
-                            Continue
-                        </button>
+                                  <span id="case-number-hint" class="govuk-hint">
+                                    This is a 16-digit number from MyHMCTS, for example 1111-2222-3333-4444
+                                  </span>
 
-                </form>
+
+                                    {% if data.errorcasenumber == 'true' %}
+                                        <span id="national-insurance-number-error" class="govuk-error-message">
+                                            <span class="govuk-visually-hidden">Error:</span> The case number must be 16 digits, for example 1111-2222-3333-4444
+                                        </span>
+                                        <input class="govuk-input govuk-input--width-10 govuk-input--error" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
+                                    {% else %}
+                                        <input class="govuk-input govuk-input--width-10" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
+                                    {% endif %}
+
+                                    </div>
+
+
+                                <button class="govuk-button" data-module="govuk-button">
+                                    Continue
+                                </button>
+                        </form>
+
+                {% endif %}
 
             </div>
         </div>
     </div>
+
+<form method="post"  action="#" class="for4" style=" float: left; margin-top: 50px;">
+    <select style="height:25px;" onchange="window.location.href='?'+this.value">
+
+        <option value="errorcasenumber=false&serviceeligibilityerror=false&"
+                {% if data.errorcasenumber == 'false' %}selected{% endif %}
+        >Default</option>
+
+        <option value="errorcasenumber=true&serviceeligibilityerror=false&"
+                {% if data.errorcasenumber == 'true'  %}selected{% endif %}
+        >Format error</option>
+
+        <option value="errorcasenumber=false&serviceeligibilityerror=true&"
+                {% if data.errorcasenumber == 'false' and  data.serviceeligibilityerror == 'true'  %}selected{% endif %}
+        >Service not eligible</option>
+
+    </select>
+</form>
 
 {% endblock %}
