--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -104,7 +104,7 @@ Case details
                                 <a href="caselist">View case list</a>
                             </p>
                         {% else %}
-                            <p>This Notice of Change request has been rejected.</p>
+                            <p>This notice of change request has been rejected.</p>
                             <p>To continue <a href="contactus">contact HMCTS</a>.</p>
                             <p><a href="caselist">View case list</a></p>
                         {% endif %}
