--- a/app/views/noticeofchange/solicitor/confirmationofstopping.html
+++ b/app/views/noticeofchange/solicitor/confirmationofstopping.html
@@ -18,7 +18,7 @@ Case details
                     <div class="govuk-panel govuk-panel--confirmation">
                         <h1  class="govuk-panel__title">You have stopped representing this client</h1>
                     </div>
-                    <p class="govuk-!-margin-top-6">We’ve sent you an email confirming this Notice of Change.</p>
+                    <p class="govuk-!-margin-top-6">We’ve sent you an email confirming this notice of change.</p>
                     <p>You have been removed from this case and no longer have access to it.
                         If you don’t represent another party in this case, it will be removed from your case list.</p>
 
