--- a/app/views/noticeofchange/solicitor/emailgoingoffrecordaccepted.html
+++ b/app/views/noticeofchange/solicitor/emailgoingoffrecordaccepted.html
@@ -67,7 +67,7 @@
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
                             <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
-                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your Notice of Change request to stop representing Joe Bloggs.</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed and accepted your notice of change request to stop representing Joe Bloggs.</p>
                             <p style="margin:30px 0 30px;font-size:19px">You have been removed from case 1593-0136-4696-9976 and no longer have access to it.</p>
                             <p style="margin:30px 0 30px;font-size:19px">If you don’t represent another party in this case, it will be removed from your case list.</p>
                             <p style="margin:30px 0 30px;font-size:19px">HM Courts & Tribunals Service</p>
