--- a/app/views/noticeofchange/solicitor/emailgoingonrecordrejected.html
+++ b/app/views/noticeofchange/solicitor/emailgoingonrecordrejected.html
@@ -67,7 +67,7 @@
                         <td style="font-family:Helvetica,Arial,sans-serif;padding:25px 20px 20px">
 
                             <p style="margin:0 0 30px;font-size:19px">Dear Sir/Madam,</p>
-                            <p style="margin:0 0 30px;font-size:19px">We have reviewed your Notice of Change request to acquire the case file for Joe Bloggs.</p>
+                            <p style="margin:0 0 30px;font-size:19px">We have reviewed your notice of change request to acquire the case file for Joe Bloggs.</p>
 
                             <p style="margin:30px 0 30px;font-size:19px">Unfortunately, your request has been rejected. This means you won’t be able to access case 1593-0136-4696-9976.</p>
 
